force-app/main/default/objects/SLA_Clock__c/SLA_Clock__c.object-meta.xml
<CustomObject>
    <label>SLA Clock</label>
    <pluralLabel>SLA Clocks</pluralLabel>
    <description>SLA Clock</description>
    <nameField>
        <label>SLA Clock Name</label>
        <type>AutoNumber</type>
        <displayFormat>SLA-{000000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>