force-app/main/default/objects/SLA_Clock__c/fields/Elapsed_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Elapsed_Minutes__c</fullName>
    <label>Elapsed Minutes</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
    <description>Elapsed Minutes</description>
</CustomField>