force-app/main/default/objects/SLA_Clock__c/fields/Start_At__c.field-meta.xml
<CustomField>
    <fullName>Start_At__c</fullName>
    <label>Start At</label>
    <type>DateTime</type>
    <description>Start At</description>
</CustomField>