force-app/main/default/objects/SLA_Clock__c/fields/Target_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Target_Minutes__c</fullName>
    <label>Target Minutes</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
    <description>Target Minutes</description>
</CustomField>